# prismpyp

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  environment.yml  mkdocs.yml  phoenix.yml  pyproject.toml  requirements-docs.txt  requirements-phoenix.txt  requirements.txt
docs/: env_setup.md  eval2d.md  eval3d.md  index.md  intersect.md  metadata.md  phoenix.md  prerequisites.md  ref_eval2d.md  ref_eval3d.md  ref_intersect.md  ref_metadata_cryosparc.md  ref_metadata_nextpyp.md  ref_phoenix.md  ref_train.md  ref_upload_cryosparc.md  ref_upload_nextpyp.md  train.md  upload_cryosparc.md  upload_nextpyp.md
scripts/: gen_cli_docs.py  visualizer.py
src/prismpyp/: __main__.py
src/prismpyp/archive/: bootstrap_loss.py  feature_clustering.py  features_loss.py  fft.py  filter_by_brightspots.py  get_list_from_csparc.py  get_list_from_phoenix.py  main_lincls.py  make_plots_from_logs.py  map_embeddings.py  map_table_features.py  plot_embeddings.py  plot_embeddings_mrc.py  weak_sup_classif.py  weak_sup_classif_eval2d.py  weak_sup_classif_eval3d.py
src/prismpyp/commands/: eval2d.py  eval3d.py  intersect.py  metadata.py  metadata_cryosparc.py  metadata_nextpyp.py  train.py  upload_cryosparc.py  upload_nextpyp.py
src/prismpyp/core/: crystalline_transforms.py  fft_transforms.py
src/prismpyp/simsiam/: builder.py
src/prismpyp/utils/: csparc_file_viewer.py  imageio.py  mrc_dataset.py  parse_args.py
