[build-system]
requires = [
    "hatchling",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "prismpyp"
dynamic = ["version"]
description = "Power-spectrum and image domain learning for self-supervised micrograph evaluation"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">3.11, <3.13"
authors = [
    { name = "Laura He", email = "laura.he@duke.edu" },
    { name = "Alberto Bartesaghi", email = "alberto.bartesaghi@duke.edu" },
]
dependencies = [
    "numpy==1.26.4",
    "scipy==1.16.1",
    "pandas>=2.1",
    "pyarrow>=14",
    "scikit-learn>=1.3",
    "scikit-image==0.25.2",
    "umap-learn>=0.5",
    "opencv-python==4.10.0.84",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "statsmodels>=0.14",
    "tqdm>=4.67",
    "pyyaml>=6.0",
    "mrcfile==1.5.4",
    "toml==0.10.2",
    "pydantic<2.12",
    "torch==2.4.0+cu121",
    "torchvision==0.19.0+cu121",
    "ipykernel",
    "ipywidgets",
    "anywidget",
    "matplotlib",
    "matplotlib-venn==1.1.2",
    "kornia==0.8.0",
    "tensorboard==2.20.0",
    "wandb==0.22.1",
    "PyWavelets==1.9.0",
]

[project.scripts]
prismpyp = "prismpyp.__main__:main"

[project.urls]
Homepage = "https://github.com/nextpyp/prismpyp"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
    packages = ["src/prismpyp"]

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
exclude = [
    "/testing/output",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD 3-Clause",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]